# wutils

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.example  Makefile.vc  Makefile.vc.example  README.md  example.cpp  meson.build  readme.rst  test.hpp  test_data.txt  testwutils.cpp  wutils.cpp  wutils.cppm  wutils.hpp
.github/workflows/: cmake-multi-platform.yml
src/: wutils.cpp
tests/: test_header.cpp  test_module.cpp
